--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3274,7 +3274,7 @@ input, select, textarea {
 /* Banner */
 
 	#banner {
-		padding: 5em 0 4.75em 0 ;
+		padding: 5em 0 0 0 ;
 	}
 
 		#banner .inner {
